infra/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medecin-africa-ingress
  namespace: medecin-africa
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
        - api.medecin.africa
        - app.medecin.africa
      secretName: medecin-tls
  rules:
    - host: api.medecin.africa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-backend-service
                port:
                  number: 8000
    - host: app.medecin.africa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-web-service
                port:
                  number: 3000
